Modified User service and route gateway